--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -18,8 +18,29 @@ spring:
       enabled: true
       max-file-size: 1MB # 파일 하나의 최대사이즈 설정
       max-request-size: 10MB #여러 파일 업로드 시 전체 합의 크기 설정
-
-
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: ${GITHUB_ID}
+            client-secret: ${GITHUB_SECRET}
+            client-name: Github
+            redirect-uri: "http://localhost:8080/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            scope:
+              - email
+              - user
+              - avatar_url
+          google:
+            client-id: ${GOOGLE_ID}
+            client-secret: ${GOOGLE_SECRET}
+            client-name: Google
+            redirect-uri: "http://localhost:8080/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            scope:
+              - email
+              - profile
 
 logging:
   level:
@@ -27,3 +48,16 @@ logging:
       springframework:
         orm:
           jpa: DEBUG
+
+server:
+  servlet:
+    encoding:
+      force-response: true
+
+mail:
+  address:
+    admin: admin@gmail.com
+jwt:
+  secret-key: ${JWT_SECRET_KEY}
+  access-token-expiration: 1440 # Access Token 유효기간(단위 : 분단위)
+  refresh-token-expiration: 2880 # Refresh Token 유효기간(단위 : 분단위)
