--- a/server/appspec.yml
+++ b/server/appspec.yml
@@ -15,7 +15,7 @@ hooks:
       timeout: 3000
       runas: root
   ApplicationStart:
-    - location: server_start.sh.sh
+    - location: server_start.sh
       timeout: 3000
       runas: root
   ApplicationStop:
