--- a/server/src/main/resources/application-server.yml
+++ b/server/src/main/resources/application-server.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://mainproject.cajngrhhpjpz.ap-northeast-2.rds.amazonaws.com:3306/server?serverTimezone=UTC&useSSL=false&characterEncoding=UTF-8
+    url: jdbc:mysql://database-1.cajngrhhpjpz.ap-northeast-2.rds.amazonaws.com:3306/server?serverTimezone=UTC&useSSL=false&characterEncoding=UTF-8
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
