--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,8 @@
     "@xeger/quill-image-formats": "^0.7.1",
     "axios": "^1.4.0",
     "highlight.js": "^11.8.0",
-    "quill-image-resize-module-ts": "^3.0.3",
     "jwt-decode": "^3.1.2",
+    "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
