--- a/server/src/main/resources/application-server.yml
+++ b/server/src/main/resources/application-server.yml
@@ -24,7 +24,7 @@ spring:
             client-id: ${GITHUB_ID}
             client-secret: ${GITHUB_SECRET}
             client-name: Github
-            redirect-uri: "http://ec2-43-201-157-191.ap-northeast-2.compute.amazonaws.com:8080/login/oauth2/code/{registrationId}"
+            redirect-uri: "https://api.mainproject.link/login/oauth2/code/{registrationId}"
             authorization-grant-type: authorization_code
             scope:
               - email
@@ -34,7 +34,7 @@ spring:
             client-id: ${GOOGLE_ID}
             client-secret: ${GOOGLE_SECRET}
             client-name: Google
-            redirect-uri: "http://ec2-43-201-157-191.ap-northeast-2.compute.amazonaws.com:8080/login/oauth2/code/{registrationId}"
+            redirect-uri: "https://api.mainproject.link/login/oauth2/code/{registrationId}"
             authorization-grant-type: authorization_code
             scope:
               - email
