--- a/server/src/main/resources/application-server.yml
+++ b/server/src/main/resources/application-server.yml
@@ -55,11 +55,7 @@ cloud:
 
 logging:
   level:
-    org:
-      springframework:
-        orm:
-          jpa: DEBUG
-
+    root: info
 server:
   servlet:
     encoding:
